--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="subscribed_podcasts">Subscribed</string>
     <string name="unsubscribe">Unsubscribe</string>
 
+    <string name="episode_notification_title">New episodes</string>
+    <string name="episode_notification_text">%1$d new episode(s) for %2$s</string>
+
 </resources>
