--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="episode_notification_title">New episodes</string>
     <string name="episode_notification_text">%1$d new episode(s) for %2$s</string>
 
+    <string name="pause">Pause</string>
+    <string name="play">Play</string>
+
 </resources>
