changes in ui design and color added media

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="skip_forward">skip forward</string>
     <string name="_1x">1x</string>
     <string name="_0_00">0:00</string>
+    <string name="episodes_header">Episodes</string>
 
 </resources>
